Nâng cấp navbar, menu khi ở mobile, thêm ảnh các khối

--- a/index.html
+++ b/index.html
@@ -57,11 +57,130 @@
           document.getElementById("header").innerHTML = html;
         });
 
-      // inlude navbar.html
+      document.head.insertAdjacentHTML(
+        "beforeend",
+        `
+  <style>
+    html {
+      scroll-behavior: smooth;
+    }
+    
+    /* Active nav link styling */
+    .nav-link.active {
+      background-color: rgb(34 197 94);
+      color: white;
+    }
+  </style>
+`
+      );
+
+      // include navbar.html
       fetch("./src/components/navbar.html")
         .then((res) => res.text())
         .then((html) => {
           document.getElementById("navbar").innerHTML = html;
+
+          const menuBtn = document.getElementById("menu-btn");
+          const closeBtn = document.getElementById("close-menu");
+          const menu = document.getElementById("menu");
+          const overlay = document.getElementById("overlay");
+
+          // Open menu
+          menuBtn.addEventListener("click", function (e) {
+            e.stopPropagation();
+            menu.classList.remove("translate-x-full");
+            menu.classList.add("translate-x-0");
+            overlay.classList.remove("hidden");
+            document.body.style.overflow = "hidden";
+          });
+
+          // Close menu
+          function closeMenu() {
+            menu.classList.add("translate-x-full");
+            menu.classList.remove("translate-x-0");
+            overlay.classList.add("hidden");
+            document.body.style.overflow = "auto";
+          }
+
+          closeBtn.addEventListener("click", closeMenu);
+          overlay.addEventListener("click", closeMenu);
+
+          // Handle navigation links
+          const navLinks = document.querySelectorAll(".nav-link");
+          navLinks.forEach((link) => {
+            link.addEventListener("click", function (e) {
+              e.preventDefault();
+
+              // Close mobile menu if open
+              if (window.innerWidth < 768) {
+                closeMenu();
+              }
+
+              // Get target section
+              const targetId = this.getAttribute("href").substring(1);
+              const targetSection = document.getElementById(targetId);
+
+              if (targetSection) {
+                // Calculate offset for fixed navbar (if you make it fixed)
+                const navbarHeight = document.querySelector("nav").offsetHeight;
+                const targetPosition =
+                  targetSection.offsetTop - navbarHeight - 20;
+
+                // Smooth scroll to target
+                window.scrollTo({
+                  top: Math.max(0, targetPosition),
+                  behavior: "smooth",
+                });
+
+                // Update active link
+                navLinks.forEach((nav) => nav.classList.remove("active"));
+                this.classList.add("active");
+              }
+            });
+          });
+
+          // Handle window resize
+          window.addEventListener("resize", function () {
+            if (window.innerWidth >= 768) {
+              closeMenu();
+            }
+          });
+
+          // Update active nav on scroll
+          window.addEventListener("scroll", function () {
+            let current = "";
+            const sections = [
+              "banner",
+              "about",
+              "service",
+              "card-doctor",
+              // "why-chosse",
+              // "footer",
+            ];
+
+            sections.forEach((sectionId) => {
+              const section = document.getElementById(sectionId);
+              if (section) {
+                const sectionTop = section.offsetTop - 100;
+                const sectionHeight = section.offsetHeight;
+
+                if (
+                  window.scrollY >= sectionTop &&
+                  window.scrollY < sectionTop + sectionHeight
+                ) {
+                  current = sectionId;
+                }
+              }
+            });
+
+            // nav link
+            navLinks.forEach((link) => {
+              link.classList.remove("active");
+              if (link.getAttribute("href") === `#${current}`) {
+                link.classList.add("active");
+              }
+            });
+          });
         });
 
       // inlude banner.html
@@ -84,25 +203,27 @@
               prevEl: ".swiper-button-prev",
             },
             breakpoints: {
-              // Khi chiều rộng màn hình nhỏ hơn 768px
+              // Khi nhỏ hơn 768px
               768: {
                 slidesPerView: 1,
-                spaceBetween: 10, // Giảm khoảng cách giữa các slide
-                height: 250, // Giảm chiều cao slider trên thiết bị nhỏ
+                spaceBetween: 10,
+                height: 250,
               },
-              // Khi chiều rộng màn hình từ 768px trở lên
+              // 768px trở lên
               1024: {
                 slidesPerView: 1.5,
-                spaceBetween: 20,
-                height: 350, // Điều chỉnh chiều cao slider trên màn hình tablet
+                spaceBetween: 5,
+                height: 300,
               },
-              // Màn hình máy tính để bàn lớn
+              // Màn hình máy tính lớn
               1280: {
                 slidesPerView: 2,
-                spaceBetween: 30,
-                height: 400, // Chiều cao lớn hơn cho màn hình desktop
+                spaceBetween: 5,
+                height: 3500,
               },
             },
+            // effect: " fade",
+            // fade: { crossFade: true },
           });
         });
 
