--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
     <link rel="stylesheet" href="./src/libs/notyf.min.css" />
     <!-- <link rel="stylesheet" href="./src/libs/notyf.min.css"> -->
+
+    <link rel="stylesheet" href="./src/libs/aos.css" />
+    <style>
+      html {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
 
   <body class="font-sans text-gray-800 lg:px-20">
@@ -31,19 +38,19 @@
     <div id="banner"></div>
 
     <!-- Giới thiệu -->
-    <div id="about"></div>
+    <div id="about" data-aos="fade-up">Giới thiệu về phòng khám</div>
 
     <!-- Dịch vụ -->
-    <div id="service"></div>
+    <div id="service" data-aos="fade-right">Dịch vụ của phòng khám</div>
 
     <!-- Đội ngũ bác sĩ -->
-    <div id="card-doctor"></div>
+    <div id="card-doctor" data-aos="fade-left">Đội ngũ bác sĩ</div>
 
-    <!-- Why chosse -->
-    <div id="why-chosse"></div>
+    <!-- Why choose -->
+    <div id="why-chosse" data-aos="fade-up">Tại sao chọn chúng tôi</div>
 
-    <!-- Why chosse -->
-    <div id="dat-lich"></div>
+    <!-- Đặt lịch -->
+    <div id="dat-lich">Đặt lịch khám</div>
 
     <!-- Footer -->
     <div id="footer"></div>
@@ -57,6 +64,17 @@
 
     <script src="./src/libs/notyf.min.js"></script>
 
-    <script></script>
+    <script src="./src/libs/aos.js"></script>
+
+    <script>
+      // Khởi tạo AOS
+      AOS.init({
+        duration: 3000,
+        easing: "ease-in-out",
+        once: true,
+        offset: 100,
+        delay: 100,
+      });
+    </script>
   </body>
 </html>
