Chỉnh sửa ảnh bsi, thêm nội dunbg nhbuw bảng giá, câu hỏi, bản đồ

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Phòng khám chuyên nghiệp, đặt lịch dễ dàng, bác sĩ tận tâm."
     />
     <title>Phòng Khám Y Khoa</title>
-
+    <link rel="icon" type="image/png" href="./assets/images/logo.png" />
     <link rel="stylesheet" href="./src/output.css" />
     <!-- <link
       rel="stylesheet"
@@ -27,7 +27,7 @@
     </style>
   </head>
 
-  <body class="font-sans text-gray-800 lg:px-20">
+  <body class="font-sans text-gray-800 lg:px-10">
     <!-- Header -->
     <div id="header" class=""></div>
 
@@ -38,19 +38,19 @@
     <div id="banner"></div>
 
     <!-- Giới thiệu -->
-    <div id="about" data-aos="fade-up">Giới thiệu về phòng khám</div>
+    <div id="about" data-aos="fade-up"></div>
 
     <!-- Dịch vụ -->
-    <div id="service" data-aos="fade-right">Dịch vụ của phòng khám</div>
+    <div id="service" data-aos="fade-right"></div>
 
     <!-- Đội ngũ bác sĩ -->
-    <div id="card-doctor" data-aos="fade-left">Đội ngũ bác sĩ</div>
+    <div id="card-doctor" data-aos="fade-left"></div>
 
     <!-- Why choose -->
-    <div id="why-chosse" data-aos="fade-up">Tại sao chọn chúng tôi</div>
+    <div id="why-chosse" data-aos="fade-up"></div>
 
     <!-- Đặt lịch -->
-    <div id="dat-lich">Đặt lịch khám</div>
+    <div id="dat-lich"></div>
 
     <!-- Footer -->
     <div id="footer"></div>
