Add pôup, edit banner layot

--- a/index.html
+++ b/index.html
@@ -20,9 +20,21 @@
     <!-- <link rel="stylesheet" href="./src/libs/notyf.min.css"> -->
 
     <link rel="stylesheet" href="./src/libs/aos.css" />
+
+    <!-- Font chữ  -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Merriweather:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       html {
         scroll-behavior: smooth;
+      }
+      html,
+      body {
+        overflow-x: hidden;
+        width: 100%;
       }
     </style>
   </head>
@@ -54,6 +66,9 @@
 
     <!-- Footer -->
     <div id="footer"></div>
+
+    <!-- Popup xuất hiện sau 5s -->
+    <div id="popup"></div>
 
     <script type="module" src="./index.js"></script>
     <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
