update ảnh bác sĩ, dịch vụ

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Footer -->
     <div id="footer"></div>
 
-    <!-- Popup xuất hiện sau 5s -->
+    <!-- Popup -->
     <div id="popup"></div>
 
     <script type="module" src="./index.js"></script>
