Chỉnh hiểu ứng chạy không phaire 1 lần

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       AOS.init({
         duration: 3000,
         easing: "ease-in-out",
-        once: true,
+        once: false,
         offset: 100,
         delay: 100,
       });
